--- a/app/src/main/res/layout/content_list_items.xml
+++ b/app/src/main/res/layout/content_list_items.xml
@@ -3,37 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_list_items"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jeffmcnally.lab1.ListItemsActivity"
-    tools:showIn="@layout/activity_list_items">
+    tools:showIn="@layout/activity_list_items"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:rowCount="2"
+    android:columnCount="2">
+
 
     <RadioButton
         android:text="@string/Button1Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/Button1" />
+        android:id="@+id/Button1"/>
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="1"/>-->
 
     <CheckBox
         android:text="@string/Button2Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/Button2" />
+        android:id="@+id/Button2"/>
+        <!--android:layout_column="2"-->
+        <!--android:layout_row="1"/>-->
 
     <Switch
         android:text="@string/SwitchText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/switch1" />
+        android:id="@+id/switch1"/>
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="2"/>-->
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        android:id="@+id/imageButton" />
+        android:id="@+id/imageButton"/>
+        <!--android:layout_column="2"-->
+        <!--android:layout_row="2"/>-->
+
+
 </GridLayout>
