--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -23,4 +23,12 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/startChatbtn"
+        android:id="@+id/startChat"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true"
+        />
 </RelativeLayout>
