--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -39,5 +39,11 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editPassword" />
+    <Button
+        android:text="@string/btnLoginText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnLogin"
+        android:layout_below="@+id/editPassword" />
 
 </LinearLayout>
