--- a/app/src/main/res/layout/content_chat_window.xml
+++ b/app/src/main/res/layout/content_chat_window.xml
@@ -14,7 +14,7 @@
     tools:showIn="@layout/activity_chat_window">
 
 
-    <android.support.design.widget.AppBarLayout
+    <!--android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout-->
 
     <ListView
         android:id="@+id/chatView"
